[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/storm/lightningStrike.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/95686__sammyf70__lightning3.ogg" type="AudioStream" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="lightningStrike" type="Node2D"]
script = ExtResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="icon" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="lightningLine" type="Line2D" parent="."]
width = 5.0
default_color = Color( 0.760784, 0.8, 1, 1 )
texture_mode = 3080292
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="lightningLineTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
[connection signal="timeout" from="lightningLineTimer" to="." method="_on_lightningLineTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
